  the location of the DVD/BD player (or folder) when this option is enabled.
* Ticket #1620, UI: Use the new styled radio bullet for menu's items
* Updated FFmpeg (n0.8-18583-g911e270)
* Updated Little CMS to v2.4 (git ff060c3)
* Updated Logitech SDK to v3.01 (driver 8.00.100)
* Updated SoundTouch to v1.7.1 r170
* Updated VirtualDub to v1.10.4-test1
* Updated Basque, Czech, German, Greek, Russian, Simplified Chinese, Slovak and Ukrainian translations
! Various WebUI fixes:
  - Fix seeking
  - Fix volume slider going out of bounds with IE in player.html
  - Fix incorrect encoding of the parent dir's path in browser.html
! MPCVideoDecoder: Fix low merit internal filter
! MPCVideoDecoder: The "Read Aspect Ratio from stream" option didn't always work right
! Ticket #84, WebServer: The filenames weren't correctly URL decoded
! Ticket #1554, The OSD was looking bad when using the EVR Sync renderer
! Ticket #2423, Fix wrong rounding leading to small black bars when resizing the window.
  This was mostly visible when using the "auto-fit" zoom or when resizing manually.
! Ticket #2783, Fix crash when generating the chapter marks
! Ticket #2805, AviSplitter: Fix a crash when closing the file while re-indexing
! Ticket #2838, The window wasn't draggable anymore by clicking on the information panel
! Ticket #2839, Post-resize shaders didn't work with VMR-9 (renderless)
! Ticket #2855, The filename could be wrong when saving a screenshot or thumbnails
! Ticket #2859, FlacSource: Improve timestamps accuracy. This fixes some cases where the
  end of the file wasn't played.
! Ticket #2863, The OSD was incorrect when restarting the playback of a file after it ended
! Ticket #2864, VobSub subtitles were autoloaded twice
! Ticket #2881, "Auto-fit" and "Auto-fit (Larger Only)" zooms gave different results
  depending on if they were used in windowed or fullscreen mode.
! Ticket #2889, Fix incorrectly displayed OSD when using EVR renderer