@@ -89,8 +89,16 @@ HRESULT CSubtitleInputPin::CompleteConnect(IPin* pReceivePin)
             name = ISO6392ToLanguage(psi->IsoLang);
             lcid = ISO6392ToLcid(psi->IsoLang);
 
-            if (wcslen(psi->TrackName) > 0) {
-                name += (!name.IsEmpty() ? _T(", ") : _T("")) + CString(psi->TrackName);
+            CString trackName(psi->TrackName);
+            trackName.Trim();
+            if (!trackName.IsEmpty()) {
+                if (!name.IsEmpty()) {
+                    if (trackName[0] != _T('(') && trackName[0] != _T('[')) {
+                        name += _T(",");
+                    }
+                    name += _T(" ");
+                }
+                name += trackName;
             }
             if (name.IsEmpty()) {
                 name = _T("Unknown");
